--- a/Functions/export_ftd_data.ipynb
+++ b/Functions/export_ftd_data.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a612828c",
+   "id": "78479322",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "989f1b5d",
+   "id": "7a4d4b4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,9 +88,9 @@
     "def fix_dataframe(dataframe):\n",
     "    # For whatever reason, exporting data to CSV file, then reimporting back in using Pandas\n",
     "    # solves all issues when it comes to reading the data in the column \n",
-    "    dataframe.to_csv('FilesTemp/temp.csv')\n",
+    "    dataframe.to_csv('../FilesTemp/temp.csv')\n",
     "    dataframe = pd.read_csv(\n",
-    "        Path('FilesTemp/temp.csv'),\n",
+    "        Path('../FilesTemp/temp.csv'),\n",
     "        infer_datetime_format=True,\n",
     "        parse_dates=True,\n",
     "        index_col=\"Date\",\n",
@@ -107,14 +107,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bc9bd61a-b11f-457c-b9ef-5942f74904b1",
+   "id": "8d9f9700",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\watso\\AppData\\Local\\Temp/ipykernel_15636/4138860850.py:30: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "C:\\Users\\watso\\AppData\\Local\\Temp/ipykernel_23896/3590283254.py:30: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
       "  data[header] = data[header].str.replace('|',',')\n"
      ]
     },
@@ -227,14 +227,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4df4d50b-0702-4709-9dbc-2a2b276aec82",
+   "id": "e493fb44",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\watso\\AppData\\Local\\Temp/ipykernel_15636/4138860850.py:30: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "C:\\Users\\watso\\AppData\\Local\\Temp/ipykernel_23896/3590283254.py:30: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
       "  data[header] = data[header].str.replace('|',',')\n"
      ]
     },
@@ -349,14 +349,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6ed3ecd2-1f50-40e9-9b8d-4c71f19ce06b",
+   "id": "3acf543b",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\watso\\AppData\\Local\\Temp/ipykernel_15636/4138860850.py:30: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "C:\\Users\\watso\\AppData\\Local\\Temp/ipykernel_23896/3590283254.py:30: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
       "  data[header] = data[header].str.replace('|',',')\n"
      ]
     },
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "72aaffb9-bbdb-4e8e-a3f1-c752da512f52",
+   "id": "5934b307",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6fe26342-d4ef-46b2-b708-e2b238cad638",
+   "id": "6117d3fb",
    "metadata": {},
    "outputs": [
     {
@@ -508,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c3b2d133-1646-4e5c-bc28-6f4f8f709232",
+   "id": "262dd17f",
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1cd0775c-62ad-4087-8da5-df8fed3638b4",
+   "id": "1497a4ad",
    "metadata": {},
    "outputs": [
     {
@@ -554,18 +554,18 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "832e365e-3074-4e14-8669-434fa13b1cab",
+   "id": "198cec53",
    "metadata": {},
    "outputs": [],
    "source": [
     "def export_csv_data(dataframe,symbol):    \n",
-    "    dataframe.to_csv('FilesExport/'+symbol+'_ftd_data.csv')"
+    "    dataframe.to_csv('../FilesExport/'+symbol+'_ftd_data.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ee965cb8-f52a-483c-bd6b-fd28672b9390",
+   "id": "51f64f63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4eb7f32e-1866-400a-a3dc-2ff95d971b49",
+   "id": "cbf17acb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -583,7 +583,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -597,7 +597,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
